@@ -14,7 +14,6 @@ lib/Petal/Hash/Var.pm
 lib/Petal/Parser.pm
 Makefile.PL
 MANIFEST			This list of files
-META.yml
 README
 t/001_Include.t
 t/002_Set_Modifier.t
@@ -72,6 +71,8 @@ t/062_Metal_Self_Include.t
 t/063_Nbsp.t
 t/064_Metal_Double_Include.t
 t/065_HTML_Attribute_Strip.t
+t/070_HTML_Errors.t
+t/071_Encode_Overloaded_Object.t
 t/benchmark.pl
 t/data/access_obj_array.html
 t/data/access_obj_hash.html
@@ -84,6 +85,7 @@ t/data/canonical_error.html
 t/data/children.xml
 t/data/comment_does_not_die.xml
 t/data/comments.xml
+t/data/content_encoded.html
 t/data/decl.xml
 t/data/delete_attribute.xml
 t/data/dummy_data.xml
@@ -94,6 +96,8 @@ t/data/eval.xml
 t/data/hash_mustfail.xml
 t/data/hash_mustpass.xml
 t/data/hashref_list.html
+t/data/html_errors/no_var.html
+t/data/html_errors/not_xml.html
 t/data/hypen.xml
 t/data/if.html
 t/data/if.xml
