@@ -1,3 +1,6 @@
+<!DOCTYPE html PUBLIC 
+  "-//W3C//DTD XHTML 1.0 Transitional//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <span>
   <span metal:define-macro="foo">Foo</span>
   <span metal:define-macro="bar">Bar</span>
