@@ -3,6 +3,7 @@ Revision history for Petal.
 2.06
     - Added HTML Errors mode
     - Fixed Petal not encoding overloaded objects
+    - Made the canonicalizer strip declarations on included files
 
 2.05 Mon Apr  5 14:14:46 2004
     - Fixed broken test
